# glyph

./: CMakeLists.txt  README.md
doc/: concept.tex  packet.tex
include/: glyph.h  test.h
scripts/: combo.py
tests/: 01_break_1.c  01_j_1.c  03_b_1.c  05_ibl_1.c  05_jalib_1.c  07_jtlib_1.c  08_addi_1.c  08_lib_1.c  09_li_1.c  10_srai_1.c  11_slli_1.c  11_srli_1.c  12_addib_1.c  12_srai_1.c  13_load_1.c  14_load_i8_1.c  14_load_u8.c  14_loadib_1.c  16_load_i64.c  16_subib_1.c  17_cmp_1.c  17_store_1.c  18_storeib_1.c  19_log_1.c  20_pin_1.c  21_and_1.c  21_pin_1.c  22_srl_1.c  23_xor_1.c  26_sra_1.c  26_sub_1.c  27_sll_1.c  28_add_1.c  28_or_1.c  29_nop_1.c  31_dump_1.c  31_illegal_1.c  32_loop_1.c
